# test

./: .gitignore
testcrew/: pyproject.toml
testcrew/db/: long_term_memory_storage.db
testcrew/src/testcrew/: crew.py  main.py  report.md
testcrew/src/testcrew/config/: agents.yaml  tasks.yaml
testcrew/src/testcrew/tools/: DirectoryPdfSearch.py
