[project]
name = "testcrew"
version = "0.1.0"
description = "testCrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai (>=0.102.0,<0.103.0)",
    "crewai[tools]>=0.102.0,<1.0.0",
    "dotenv (>=0.9.9,<0.10.0)",
    "gradio (>=5.20.0,<6.0.0)",
    "gradio-pdf (>=0.0.22,<0.0.23)"
]

[project.scripts]
testcrew = "testcrew.main:run"
run_crew = "testcrew.main:run"
train = "testcrew.main:train"
replay = "testcrew.main:replay"
test = "testcrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
